# tytle-enclaves

./: .gitignore  MANIFESTS.md  README.md  SECURITY.md  VERIFICATION.md
monerium-payment/: Dockerfile  build.sh  package-lock.docker.json  package-lock.json  package.docker.json  package.json  tsconfig.json  vitest.config.ts
monerium-payment/src/: enclave.ts  manifest.ts  moneriumPaymentHandler.ts
native/: Cargo.toml  package-lock.json  package.json
native/src/: lib.rs  nsm.rs  vsock.rs
parent/: Dockerfile  build.sh  package-lock.docker.json  package-lock.json  package.docker.json  package.json
parent/src/: enclaveRouter.ts  healthCheck.ts  server.ts  types.ts  vsockClient.ts
scripts/: generate-docker-lockfiles.sh  rotate-pcr0.sh  test-determinism.sh
shared/: package-lock.docker.json  package-lock.json  package.docker.json  package.json  tsconfig.json
shared/src/: attestor.ts  bn254Codec.ts  createEnclave.ts  enclaveHelpers.ts  errorUtils.ts  handlerFactory.ts  httpProxy.ts  index.ts  logger.ts  manifest.ts  policies.ts  policyEngine.ts  protocol.ts  requestHandler.ts  retryProxy.ts  sanitize.ts  types.ts  (+1 more)
sicae/: Dockerfile  build.sh  package-lock.docker.json  package-lock.json  package.docker.json  package.json  tsconfig.json
stripe-payment/: Dockerfile  build.sh  package-lock.docker.json  package-lock.json  package.docker.json  package.json  tsconfig.json
verify/: Dockerfile.nitro-cli  package-lock.json  package.json
vies/: Dockerfile  build.sh  package-lock.docker.json  package-lock.json  package.docker.json  package.json  tsconfig.json
(+39 files in other folders)
