[package]
name = "tytle-enclaves-native"
version = "0.1.0"
edition = "2021"
description = "Native Rust addon for vsock + NSM ioctl — used inside Nitro Enclaves"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["full"] }
napi-derive = "2"
libc = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
